Added CF installation prerequisites

--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
@@ -1,7 +1,16 @@
 [id="proc_Installing_cloudforms_automatically"]
 = Installing CloudForms
 
-CloudForms is installed with Ansible. The Ansible roles are located in +/usr/share/doc/ovirt-ansible-roles-_version_/examples+.
+Red Hat CloudForms is installed with Ansible. The Ansible roles are located in +/usr/share/doc/ovirt-ansible-roles-_version_/examples+.
+
+[discrete]
+== Prerequisites
+
+The machine on which CloudForms will be installed should have the following minimum configuration:
+
+* 16 GB memory
+* 2 CPUs
+* Minimum of 4 generic workers
 
 [discrete]
 == Procedure
