--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VMs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VMs.adoc
@@ -3,6 +3,8 @@
 
 Memory, processors, and disks can be reconfigured on existing VMware and Red Hat Virtualization virtual machines using the *Reconfigure this VM* button.
 
+You can reconfigure multiple components on a virtual machine using one request before confirming the changes with the *Submit* button, or make each reconfiguration separately.
+
 [IMPORTANT]
 ====
 The following restrictions apply to adding and removing Red Hat Virtualization virtual machine disks:
@@ -26,5 +28,8 @@ include::Reconfiguring_VM_Memory.adoc[]
 
 :leveloffset: 3
 include::Reconfiguring_VM_Processors.adoc[]
+
+:leveloffset: 3
+include::Reconfiguring_VM_Network_Adapters.adoc[]
 
 
