--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -575,11 +575,11 @@ These roles are enabled by default on all servers.
 |Capacity & Utilization Data Collector|The Capacity & Utilization Data Collector performs the actual collection of capacity and utilization data. This role has a dedicated worker, and there can be more than one {product-title_short} server with this role in a zone.|Zone|Active/Active
 |Capacity & Utilization Data Processor|The Capacity & Utilization Data Processor processes all of the data collected, allowing {product-title_short} to create charts. This role has a dedicated worker, and there can be more than one {product-title_short} server with this role in a zone.|Zone|Active/Active
 |Database Operations|Use Database Operations to enable this {product-title_short} server to run database backups or garbage collection.|Zone|Active/Active
-|Embedded Ansible|This role is disabled by default. The Embedded Ansible role supports Ansible Automation Inside functionality. Enable this role to configure playbook repositories and run playbooks natively to back service catalog items.|Region|Primary/Secondary
+|Embedded Ansible|This role is disabled by default. The Embedded Ansible role supports Ansible Automation Inside functionality. Enable this role to configure playbook repositories and run playbooks natively to back service catalog items. *NOTE*: Enable the Provider Inventory server role in the same zone as the Embedded Ansible server role to ensure proper functionality. |Region|Primary/Secondary
 |Event Monitor|This role is enabled by default and provides the information shown in timelines. The Event Monitor is responsible for the work between the {product-title_short} server and your providers. It starts 2 workers for each provider. One worker, the monitor, is responsible for maintaining a connection to a provider, catching events, and putting them on the {product-title_short} message queue for processing. The second worker, the handler, is a message queue worker responsible for delivering only those messages for a provider. You should have at least one of these in each zone.|Zone|Primary/Secondary
 |Git Repository|The Git Repositories Owner server role supports importing domains into automate from a git repository. This feature is available from the Automate > Import/Export screen in the {product-title_short} user interface.|Region|Primary/Secondary
 |Notifier|Use this role if you will be using {product-title_short} Control or Automate to forward SNMP traps to a monitoring system or send e-mails. See <<Configuring SNMP>> for details on creating SNMP alerts. If more than one {product-title_short} server in a specific region has this role, only one will be active at a time.|Region|Primary/Secondary
-|Provider Inventory|This role is enabled by default. This role is responsible for refreshing provider information including EMS, hosts, virtual machines, and clusters, and is also responsible for capturing datastore file lists. If more than one {product-title_short} server in a specific zone has this role, only one will be active at a time.|Zone|Primary/Secondary
+|Provider Inventory|This role is enabled by default. This role is responsible for refreshing provider information including EMS, hosts, virtual machines, and clusters, and is also responsible for capturing datastore file lists. If more than one {product-title_short} server in a specific zone has this role, only one will be active at a time. Required in the same zone as a {product-title_short} appliance with the Embedded Ansible role enabled.|Zone|Primary/Secondary
 |Provider Operations|This role is enabled by default. This role sends stop, start, suspend, shutdown guest, clone, reconfigure, and unregister to the provider, directly from the console or through a policy action if you have {product-title_short} Control. More than one {product-title_short} server can have this role in a zone.|Zone|Active/Active
 |RHN Mirror|An appliance with RHN Mirror enabled acts as a server containing a repository with the latest {product-title_short} packages. This also configures other appliances within the same region to point to the chosen RHN Mirror server for updates. This provides a low bandwidth method to update environments with multiple appliances.|N/A|Active/Active
 |Reporting|This role is enabled by default. The Reporting role specifies which {product-title_short} servers can generate reports. If you do not have a {product-title_short} server set to this role in a zone, then no reports can be generated in that zone. You should have at least one of these in each zone.|Zone|Active/Active
