--- a/doc-Managing_Authentication/topics/External_AD.adoc
+++ b/doc-Managing_Authentication/topics/External_AD.adoc
@@ -2,15 +2,12 @@
 = Configuring Authentication with Active Directory
 //source content https://access.redhat.com/solutions/2751431
 
+This procedure outlines how to configure {product-title_short} to authenticate against an existing Active Directory (AD) configuration using external HTTP authentication. This provides Active Directory users access to the {product-title_short} appliance user interface, as well as the REST API.
+
 [[connecting_to_AD_domain]]
 == Connecting {product-title_short} to an Active Directory Domain
 
-This procedure outlines how to configure {product-title_short} to authenticate against an existing Active Directory (AD) configuration using external HTTP authentication. This provides Active Directory users access to the {product-title_short} appliance user interface, as well as the REST API.
-
-
-// EDIT A SUMMARY FOR THIS To enable external authentication using Active Directory complete the following steps to configure your HTTP server, then your {product-title_short} appliance.
-
-// Do we need Network Manager step from MIQ docs still?)
+To use a Active Directory domain to authenticate users to {product-title_short}, configure the following on {product-title_short}:
 
 . Connect to the {product-title_short} appliance using SSH.
 . Run `realm discover` to determine what Active Directory realms are available:
@@ -148,7 +145,6 @@ From the {product-title_short} user interface:
 . Select *Enable Single Sign-On* to allow single sign-on using Kerberos tickets from client machines that authenticate to the same Active Directory domain as the appliance.
 . In the *Role Settings* area, select *Get User Groups from External Authentication (httpd)*.
 . Click *Save*.
-//add screenshot from article.
 
 [IMPORTANT]
 ====
@@ -162,8 +158,8 @@ Make sure the user's Active Directory groups for the appliance are created and a
 
 This section provides instructions for mapping your existing Active Directory (AD) groups to user account roles in {product-title_short}. 
 
-This is done by assigning a {product-title_short} role to an AD group, then when an AD user who is a part of that AD group attempts to log in to {product-title_short} gets the role assigned automatically and inherits the permissions from that role.
-As a result, all users in that AD group will then be assigned the {product-title_short} roles associated with that group.
+This is done by assigning a {product-title_short} role to an AD group. When an AD user who is a part of that AD group attempts to log in to {product-title_short}, they get that role assigned automatically and inherit the permissions from that role.
+As a result, all users in that AD group will then be assigned the {product-title_short} role(s) associated with that group.
 
 After configuring {product-title_short} to connect to an Active Directory domain in xref:connecting_to_AD_domain[], complete the following steps:
 
@@ -176,16 +172,18 @@ After configuring {product-title_short} to connect to an Active Directory domain
 image:AD-userlookup.png[]
 +
 . Click *Retrieve* to look up details for the user in Active Directory and pull group information for the user. As a result, the AD groups will appear in the *LDAP Groups for User* dropdown list.
-. From the list in *LDAP Groups for User*, select the group you want to associate a {product-title_short} role with, for example, the `cloudforms` group.
-. Select a *Role* to map to the group.
-. Select a *Project/Tenant* to map to the group.
+. From the list in *LDAP Groups for User*, select the group you want to associate a {product-title_short} role with; for example, the `cloudforms` group.
 +
 image:Assign_AD-Roles.png[]
 +
+. Select a *Role* to map to the group.
+. Select a *Project/Tenant* to map to the group.
 . Click *Add*.
 
 Any user who is part of `cloudforms` AD group can now log in to {product-title_short} with their AD username and password, and they will automatically inherit the permissions for the role you assigned earlier.
 
-If you have another user that you want to be able to login to the {product-title_short} server, add that user to the `cloudforms` AD group. 
+To confirm this is configured correctly, log in to the {product-title_short} user interface with a user in the `cloudforms` AD group.
+
+To grant an additional user access to the {product-title_short} server, add that user to the `cloudforms` AD group. 
 
 //Frank: (only in AD? Or can you also add the user via CF?)
