--- a/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Planning.adoc
@@ -19,6 +19,7 @@ A well-planned migration is critical for success. During the planning process, y
 * Keep linked applications together and migrate at the same time.
 * Move critical applications during maintenance windows.
 * Plan for redundancy.
+* Ensure that you have sufficient space for the migration. The migration process does not delete the original virtual machines.
 * Stagger migration schedules.
 * Prepare your users for downtime.
 * Minimize the impact on your environment, possibly by throttling bandwidth usage.
