--- a/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
+++ b/doc-V2V_Guide/cfme/doc/con_Introduction.adoc
@@ -21,6 +21,6 @@ The infrastructure migration has 5 key stages:
 * Discovery: Discovering the VMware and RHV infrastructure providers and resources.
 * Planning: Planning for Migration.
 * Migration: Creating an infrastructure mapping, creating and running a migration plan.
-* Troubleshooting: Failed migrations, log files, common issues or mistakes.
+* Troubleshooting: Re-migrating virtual machines, log files, common issues or mistakes.
 
 *(%AP: How long will migration take for x number of VMs? How many machines do they need?)*
