--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -32,10 +32,9 @@ Create and run a migration plan:
 .. Click *Next*.
 .. Select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*.
 
-* If you are migrating a large number of virtual machines:
+* If you are migrating a large number of virtual machines:[[CSV_import]]
 
 .. (Optional) To validate your infrastructure mapping, select *Choose from a list of VMs discovered in the selected infrastructure mapping* and click *Next*. If your virtual machines appear in the list, the infrastructure mapping is correct. Click *Back*.
-
 .. Select *Import a CSV file with a list of VMs to be migrated* and click *Next*.
 .. Click *Import*, browse to the CSV file, and click *Open*.
 
