--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VM_Network_Adapters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VM_Network_Adapters.adoc
@@ -8,6 +8,8 @@ This functionality is available on VMware virtual machines only.
 
 You can add or remove network adapters on a VMware virtual machine from the *Reconfigure this VM* button.
 
+== Adding a Network Adapter to a VMware Virtual Machine 
+
 To add a network adapter to a virtual machine:
 
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
@@ -20,9 +22,9 @@ To add a network adapter to a virtual machine:
 
 A request to add the network adapter is then processed for the virtual machine. You can view the details for the new network adapter by navigating to the *Reconfigure this VM* area. When the network adapter is added, a name and MAC address are assigned to the adapter.
 
+== Removing a Network Adapter from a VMware Virtual Machine 
 
 To remove a network adapter from a virtual machine:
-
 
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the target virtual machine.
