--- a/doc-V2V_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -4,7 +4,7 @@
 [discrete]
 == Re-migrating Virtual Machines
 
-If a migration fails for any reason (for example, network communication between the source and target providers is disrupted during the migation process), you can re-migrate the virtual machines:
+If a migration fails for any reason (for example, network communication between the source and target providers is disrupted during the migration process), you can re-migrate the virtual machines:
 
 . Delete the target virtual machines that were created during the failed migration. Not doing so will cause the migration to fail because a target machine with the same name already exists.
 . Create a xref:CSV_import[CSV file] with the names and, optionally, providers, of the source virtual machines.
