--- a/doc-V2V_Guide/cfme/doc/modules/proc_Adding_hosts_to_the_Manager.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Adding_hosts_to_the_Manager.adoc
@@ -1,10 +1,7 @@
-[[Adding_a_host_to_the_Manager]]
-= Adding a Host to the Red Hat Virtualization Manager
+[[Adding_hosts_to_the_Manager]]
+= Adding Hosts to the Red Hat Virtualization Manager
 
-[NOTE]
-====
-Adding a host to your Red Hat Virtualization environment can take some time, as the following steps are completed by the platform: virtualization checks, installation of packages, and creation of a bridge.
-====
+Adding hosts to your Red Hat Virtualization environment can take some time, as the following steps are completed by the platform: virtualization checks, installation of packages, and creation of a bridge.
 
 Add a host to the Manager:
 
