--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_CloudForms.adoc
@@ -1,7 +1,7 @@
 [[Configuring-cloudforms]]
-= Configuring the CloudForms Database
+= Configuring CloudForms
 
-After installing CloudForms and running it for the first time, configure the internal database in which CloudForms stores information about the environment:
+Configure the internal database in which CloudForms stores information about the environment:
 
 . Connect using SSH to the CloudForms machine and start the appliance console to display the console settings menu:
 +
