--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -2,9 +2,12 @@
 = Creating and Running a Migration Plan
 
 [discrete]
-== Prerequisite for Large Migration
+== Prerequisites
 
-If you are migrating a large number of virtual machines, create a CSV file specifying the virtual machine names (mandatory) and provider (optional, for differentiating virtual machines with identical names), in the following format:
+* If you are migrating a large number of virtual machines or you are re-migrating virtual machines after a failed migration, you must create a CSV file of virtual machines to import.
++
+The CSV file specifies the virtual machine names (mandatory) and providers (optional, for differentiating virtual machines with identical names), in the following format:
++
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 Name, Provider
@@ -14,10 +17,10 @@ _vm03_, _vSphere3_
 ...
 ----
 
-[discrete]
-== Creating and Running the Migration Plan
+* If you are migrating a small number of virtual machines, follow the procedure below. The migration plan discovers the virtual machines, which you select manually.
 
-Create and run a migration plan:
+[discrete]
+== Procedure
 
 . Go to menu:Compute[Migration] and click *Create Migration Plan*.
 
