--- a/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Installing_cloudforms_automatically.adoc
@@ -1,7 +1,7 @@
 [id="proc_Installing_cloudforms_automatically"]
 = Installing CloudForms
 
-Red Hat CloudForms is installed with Ansible. The Ansible roles are located in +/usr/share/doc/ovirt-ansible-roles-_version_/examples+.
+Red Hat CloudForms is installed with Ansible. The Ansible roles are located in +/usr/share/doc/ovirt-ansible-roles-_version_/examples+ on the Manager machine.
 
 [discrete]
 == Prerequisites
@@ -15,7 +15,7 @@ The machine on which CloudForms will be installed should have the following mini
 [discrete]
 == Procedure
 
-. Create a working directory on the Red Hat Virtualization Manager machine, for example, `/my_ansible`.
+. Create a working directory on the Manager machine, for example, `/my_ansible`.
 
 . In your working directory, create a `passwords.yml` file containing the Manager password:
 +
