--- a/doc-V2V_Guide/cfme/doc/modules/proc_Logging_into_CloudForms.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Logging_into_CloudForms.adoc
@@ -1,8 +1,7 @@
-[[Logging_in_to_CloudForms]]
-[discrete]
-= Logging in to CloudForms
+[[Logging_into_CloudForms]]
+= Logging into CloudForms
 
-After CloudForms is installed, you can log in and perform administration tasks:
+After CloudForms is configured, log in to ensure that you can access CloudForms, log out, and change the default password:
 
 . In a browser, go to +https://_CloudForms_FQDN_+ for the welcome screen.
 . Enter the default credentials (Username: *admin* | Password: *smartvm*) for the initial login.
