--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
@@ -1,66 +1,56 @@
 [id="proc_Configuring_rhv_conversion_hosts"]
-= Configuring RHV Conversion Hosts
+= Configuring Red Hat Virtualization Conversion Hosts
 
-Create one or more RHV conversion hosts.
+Create one or more Red Hat Virtualization conversion hosts.
 
 [discrete]
 == Prerequisites
 
-. Log into the link:https://www.vmware.com/support/developer/vddk/[VMware VDDK Documentation] site and download the latest VDDK package.
+. Log into the link:https://www.vmware.com/support/developer/vddk/[VMware VDDK Documentation] site and download the latest VDDK package (for example, `VMware-vix-disklib-6.5.3-8315684.x86_64.tar.gz`).
 
 . Using SCP, copy the VDDK package to `/var/www/html` on the Manager machine.
 
-. Generate an SSH key for the Manager machine and copy it to each conversion host.
+. Generate an SSH key for the Manager machine and copy it to each RHV conversion host.
 
 [discrete]
 == Procedure
 
-. Copy `conversion_host_enable.yml`, and `conversion_host_check.yml` to your current directory:
+. Copy the conversion host playbooks to your current directory:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # cp /usr/share/doc/ovirt-ansible-v2v-conversion-host-_version_/examples/{conversion_host_enable.yml,conversion_host_check.yml} .
 ----
 
-. Create the `conversion_hosts` inventory file in the working directory and add the _v2v_vddk_package_name_, _v2v_vddk_package_url_, and conversion hosts:
+. Create a `conversion_hosts` inventory file:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 all:
   vars:
     v2v_repo_rpms_name: "v2v-nbdkit-rpms"
-    v2v_repo_rpms_url: "http://_content.example.com_/v2v-nbdkit-rpms"
     v2v_repo_srpms_name: "v2v-nbdkit-src-rpms"
-    v2v_repo_srpms_url: "http://_content.example.com_/v2v-nbdkit-src-rpms"
     v2v_vddk_package_name: "_VMware-vix-disklib-6.5.2-6195444.x86_64.tar.gz_"
-    v2v_vddk_package_url: "http://_content.example.com_/VMware-vix-disklib-6.5.2-6195444.x86_64.tar.gz"
   hosts:
     _conversion_host1.com_:
     _conversion_host2.com_:
 ----
 
-. Copy the `/etc/ansible/ansible.cfg` file to the working directory, uncomment the `inventory` line, and replace `/etc/ansible/hosts` with `conversion_hosts`:
+. Enable the conversion hosts:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-inventory      = conversion_hosts
+# ansible-playbook -i conversion_hosts conversion_host_enable.yml
 ----
 
-. Run the `conversion_host_enable` playbook:
-+
-[options="nowrap" subs="+quotes,verbatim"]
-----
-# ansible-playbook conversion_host_enable.yml
-----
-
-. Run the `conversion_host_check` playbook to verify that the conversion host is enabled:
+. Verify that the conversion hosts are enabled:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # ansible-playbook conversion_host_check.yml
 ----
 
-After configuring the RHV conversion hosts, you will log into CloudForms, change the default password, and configure the CloudForms VMDB.
+After configuring the conversion hosts, you can configure CloudForms.
 
 [discrete]
 == Additional resources
