Minor wording edit
Removed a few words to improve clarity.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1502,7 +1502,7 @@ You may be instructed by Red Hat to edit some configuration settings manually. T
 ====
 * Only make manual changes to your configuration files if directed to do so by Red Hat.
 
-* {product-title_short} provides the ability to edit advanced configuration settings for all appliances through the *Advanced* tab from the user interface. You can also specify advanced settings for entire zones by clicking the *Advanced* tab at the zone level, with the advanced settings applied to individual appliances in that zone by clicking the *Advanced* tab at the individual appliances level overriding zone-level settings when set.
+* {product-title_short} provides the ability to edit advanced configuration settings for all appliances through the *Advanced* tab from the user interface. You can also specify advanced settings for entire zones by clicking the *Advanced* tab at the zone level, with the advanced settings applied to individual appliances in that zone overriding zone-level settings when set.
 ====
 
 [[editing-configuration-files-manually]]
