Rewording based on review comments

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VMs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reconfiguring_VMs.adoc
@@ -3,7 +3,7 @@
 
 Memory, processors, and disks can be reconfigured on existing VMware and Red Hat Virtualization virtual machines using the *Reconfigure this VM* button.
 
-You can reconfigure multiple components on a virtual machine using one request before confirming the changes with the *Submit* button, or make each reconfiguration separately.
+You can reconfigure multiple components on a virtual machine using one request, or make each reconfiguration separately. Confirm your changes using the *Submit* button.
 
 [IMPORTANT]
 ====
