Add support for OpenID-Connect (OIDC)

--- a/auth/saml.adoc
+++ b/auth/saml.adoc
@@ -184,7 +184,7 @@ Login as admin, then in _Configure->Configuration->Authentication_
 redirect to the SAML Identity Provider authentication screen.  Note that logouts from the Appliance will
 return the user to the Appliance login screen allowing them to login as admin unless _Disable Local Login_
 is checked below.
-* Check: _Enable SAML_ - This enables the SAML login button on the login screen, the redirects
+* Check: _provider Type: _Enable SAML_ - This enables the SAML login button on the login screen, the redirects
 to the SAML protected page for authentication, and supports the SAML logout process.
 * Optional: Check: _Disable Local Login_ - Do this *only* if you need to disable _admin_ login to appliance and only
 allow SAML based authentication.  Note that if there are issues with the Identity Provider or you need
