Uploading virtio and guest tool images

--- a/doc-V2V_Guide/cfme/doc/modules/ref_Storage_to_CF_link.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Storage_to_CF_link.adoc
@@ -1,1 +1,1 @@
-After you have added your storage domain to the data center, you can install CloudForms. Go to xref:proc_Installing_cloudforms_automatically[].
+After you have added your storage domain to the data center, you can upload the VirtIO and Guest Tool image files to the Manager. See xref:Uploading_the_virtio_and_guest_tool_image_files_to_the_storage_domain[Uploading the VirtIO and Guest Tool Image Files to the Storage Domain] for details.
