--- a/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
@@ -8,7 +8,7 @@ include::modules/proc_Installing_Red_Hat_Virtualization_Hosts.adoc[leveloffset=+
 include::modules/proc_Adding_hosts_to_the_Manager.adoc[leveloffset=+1]
 
 include::modules/ref_Storage.adoc[leveloffset=+1]
-
+include::modules/proc_Uploading_the_virtio_and_guest_tool_image_files_to_the_storage_domain.adoc[leveloffset=+1]
 include::modules/proc_Installing_cloudforms_automatically.adoc[leveloffset=+1]
 include::modules/proc_Configuring_rhv_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Configuring_CloudForms.adoc[leveloffset=+1]
