--- a/doc-V2V_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -29,7 +29,7 @@ If a migration plan does not complete successfully, check the logs for errors:
 
 * Incorrect infrastructure mapping.
 +
-Check the CloudForms migration log to identify the errors and create a new infrastructure mapping.
+If you create an infrastructure mapping and subsequently add or remove providers or provider objects, the infrastructure mapping will not work. This is because the object IDs of the providers and their objects have changed. You must delete the infrastructure mapping and re-create it.
 
 * RHV host credentials are not set in CloudForms.
 +
